@@ -1479,12 +1479,47 @@ argument_list|,
 name|_properties
 argument_list|)
 decl_stmt|;
+if|if
+condition|(
+name|txt
+operator|.
+name|trim
+argument_list|()
+operator|.
+name|length
+argument_list|()
+operator|==
+literal|0
+condition|)
+block|{
+return|return;
+block|}
 name|String
 name|context
 init|=
 name|getContext
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|context
+operator|.
+name|equals
+argument_list|(
+literal|"project/parent/groupId"
+argument_list|)
+operator|&&
+name|_organisation
+operator|==
+literal|null
+condition|)
+block|{
+name|_organisation
+operator|=
+name|txt
+expr_stmt|;
+return|return;
+block|}
 if|if
 condition|(
 name|context
@@ -1515,6 +1550,21 @@ argument_list|)
 condition|)
 block|{
 if|if
+condition|(
+name|context
+operator|.
+name|equals
+argument_list|(
+literal|"project/groupId"
+argument_list|)
+condition|)
+block|{
+name|_organisation
+operator|=
+name|txt
+expr_stmt|;
+block|}
+if|else if
 condition|(
 name|_organisation
 operator|==
