@@ -494,6 +494,144 @@ expr_stmt|;
 block|}
 specifier|public
 name|void
+name|testParent2
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|ModuleDescriptor
+name|md
+init|=
+name|PomModuleDescriptorParser
+operator|.
+name|getInstance
+argument_list|()
+operator|.
+name|parseDescriptor
+argument_list|(
+operator|new
+name|Ivy
+argument_list|()
+argument_list|,
+name|getClass
+argument_list|()
+operator|.
+name|getResource
+argument_list|(
+literal|"test-parent2.pom"
+argument_list|)
+argument_list|,
+literal|false
+argument_list|)
+decl_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+argument_list|)
+expr_stmt|;
+name|ModuleRevisionId
+name|mrid
+init|=
+name|ModuleRevisionId
+operator|.
+name|newInstance
+argument_list|(
+literal|"fr.jayasoft"
+argument_list|,
+literal|"test"
+argument_list|,
+literal|"1.0"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|mrid
+argument_list|,
+name|md
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertNotNull
+argument_list|(
+name|md
+operator|.
+name|getConfigurations
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|PomModuleDescriptorParser
+operator|.
+name|MAVEN2_CONFIGURATIONS
+argument_list|)
+argument_list|,
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|md
+operator|.
+name|getConfigurations
+argument_list|()
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Artifact
+index|[]
+name|artifact
+init|=
+name|md
+operator|.
+name|getArtifacts
+argument_list|(
+literal|"master"
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+literal|1
+argument_list|,
+name|artifact
+operator|.
+name|length
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|mrid
+argument_list|,
+name|artifact
+index|[
+literal|0
+index|]
+operator|.
+name|getModuleRevisionId
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"test"
+argument_list|,
+name|artifact
+index|[
+literal|0
+index|]
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+specifier|public
+name|void
 name|testDependencies
 parameter_list|()
 throws|throws
